--- a/Code/Project_DataWrangling.Rmd
+++ b/Code/Project_DataWrangling.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "Project_Code"
 output: pdf_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE}
@@ -27,7 +29,7 @@ plot(pressure)
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
 
-
+# Set Working Directory and Load Data 
 ```{r setup, include=FALSE}
 # Set your working directory
 
@@ -42,7 +44,47 @@ library(tidyverse)
 
 # Load your datasets
 
-Ellerbee.Raw <- read.csv(../Data/Raw)
+Ellerbe.Raw <- read.csv (../Data/Raw/Ellerbe_WaterQuality_Raw_Data.csv)
+
+Ellerbe.Raw <- Ellerbe_WaterQuality_Raw_Data
+
+head(Ellerbe.Raw)
+colnames(Ellerbe.Raw)
+summary(Ellerbe.Raw$ActivityTypeCode, maxsum = 5)
+head(Ellerbe.Raw$ActivityTypeCode)
+
+Ellerbe.Processed <- Ellerbe.Raw %>%
+  select(OrganizationIdentifier, ActivityStartDate:`ActivityEndTime/Time`, MonitoringLocationIdentifier, HydrologicEvent, HydrologicCondition, CharacteristicName, ResultSampleFractionText, ResultMeasureValue, ResultStatusIdentifier, ResultValueTypeName, -`ActivityStartTime/TimeZoneCode`)
+
+write.csv(Ellerbe.Processed, row.names = FALSE, 
+          file = "./Data/Processed/Ellerbe_Processed.csv")
+
+getwd()
+```
+
+
+
+# Format Dates
+```{r}
+Ellerbe.Processed$ActivityStartDate <- as.Date(Ellerbe.Processed$ActivityStartDate, format = "%m/%d/%y")
+Ellerbe.Processed$ActivityEndDate <- as.Date(Ellerbe.Processed$ActivityEndDate, format = "%m/%d/%y")
+
+
+```
+
+#Pull out just nutrient data 
+```{r}
+Ellerbe.Nutrients <- subset(Ellerbe.Processed, CharacteristicName == "Flow" | CharacteristicName == "Gage height" | CharacteristicName == "Total dissolved solids" | CharacteristicName == "Dissolved oxygen (DO)" | CharacteristicName == "Height, gage" | CharacteristicName == "Temperature" | CharacteristicName == "Total suspended solids" | CharacteristicName == "pH")
+
+Ellerbe.Nutrients <- drop_na(Ellerbe.Nutrients, ResultMeasureValue)
+
+```
+
+
+#Convert to Wide
+
+```{r}
+Ellerbe.spread <- spread(Ellerbe.Nutrients, CharacteristicName, ResultMeasureValue)
 
 ```
 
